[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geoguessr-api"
version = "1.0.0"
authors = [
  { name="Antoine BLAISE", email="antoine.blaise34@gmail.com" },
]
description = "An asynchronous API integrator for Geoguessr"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests >= 2.26.0"
]

[project.urls]
"Homepage" = "https://github.com/toinoublz/geoguessr-api"